eclipse-workspace/.metadata/.plugins/org.eclipse.cdt.ui/PSP_Treta_1.3.build.log
23:32:55 **** Rebuild of configuration Debug for project PSP_Treta_1.3 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o main3.o "..\\main3.c" 
..\main3.c: In function 'main':
..\main3.c:84:37: warning: missing braces around initializer [-Wmissing-braces]
  reprezentacija R[2]={{"Makedonija",{{"Manaskov",levokr,17},{"Filip",levbeg,18},{"Igor",centr,6},{"Stoilov",piker,25},{"Kire",desebeg,9},
                                     ^
..\main3.c:84:37: note: (near initialization for 'R[0].igraci')
..\main3.c:84:23: warning: missing braces around initializer [-Wmissing-braces]
  reprezentacija R[2]={{"Makedonija",{{"Manaskov",levokr,17},{"Filip",levbeg,18},{"Igor",centr,6},{"Stoilov",piker,25},{"Kire",desebeg,9},
                       ^
..\main3.c:84:23: note: (near initialization for 'R[0]')
..\main3.c:86:11: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
           ^
..\main3.c:86:11: note: (near initialization for 'R[1].igraci[0]')
..\main3.c:86:27: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
                           ^
..\main3.c:86:27: note: (near initialization for 'R[1].igraci[1]')
..\main3.c:86:43: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
                                           ^
..\main3.c:86:43: note: (near initialization for 'R[1].igraci[2]')
..\main3.c:86:58: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
                                                          ^
..\main3.c:86:58: note: (near initialization for 'R[1].igraci[3]')
..\main3.c:86:73: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
                                                                         ^
..\main3.c:86:73: note: (near initialization for 'R[1].igraci[4]')
..\main3.c:86:90: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
                                                                                          ^
..\main3.c:86:90: note: (near initialization for 'R[1].igraci[5]')
..\main3.c:86:107: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
                                                                                                           ^
..\main3.c:86:107: note: (near initialization for 'R[1].igraci[6]')
..\main3.c:86:10: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
          ^
..\main3.c:86:10: note: (near initialization for 'R[1].igraci')
..\main3.c:86:4: warning: missing braces around initializer [-Wmissing-braces]
    {"AA",{{"A1",levokr,1},{"A2",levbeg,2},{"A3",centr,3},{"A4",piker,4},{"A5",desebeg,5},{"A6",desnokr,7},{"A7",golman,8}}},0,7}
    ^
..\main3.c:86:4: note: (near initialization for 'R[1]')
..\main3.c:86:4: warning: excess elements in array initializer
..\main3.c:86:4: note: (near initialization for 'R')
..\main3.c:84:22: warning: missing braces around initializer [-Wmissing-braces]
  reprezentacija R[2]={{"Makedonija",{{"Manaskov",levokr,17},{"Filip",levbeg,18},{"Igor",centr,6},{"Stoilov",piker,25},{"Kire",desebeg,9},
                      ^
..\main3.c:84:22: note: (near initialization for 'R')
..\main3.c:87:2: error: expected ',' or ';' before '}' token
  };
  ^

23:32:55 Build Failed. 1 errors, 13 warnings. (took 326ms)

